REGRESSION (r246869): ASSERTION FAILED: !renderer().hasRepaintLayoutRects() || renderer().repaintLayoutRects().m_repaintRect == renderer().clippedOverflowRectForRepaint(renderer().containerForRepaint()) https://bugs.webkit.org/show_bug.cgi?id=199274

Reviewed by Zalan Bujtas.

When layer backing sharing changes, we need to clear cached repaint rects, since they
painting root changes.

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::setBackingProviderLayer):

Canonical link: https://commits.webkit.org/213238@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246899 268f45cc-cd09-0410-ab3c-d52691b4dbfc